--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@
   top: 80px;
   left:90px;
 }
+
+#boxes{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.box{
+  width: 200px;
+  height: 200px;
+  }
+
+  .pac{
+    text-align: center;
+    font-size: 100px;
+  }
